Added script file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<body>
 <p>Random Number Generator!</p>
-<button></button>
+<button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
+<p id = "numHolder">None</p>
+
+<script src="js/script.js"></script>
+</body>
 </html>
