--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <body>
 <p>Random Number Generator!</p>
 <button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
-<p id = "numHolder">None</p>
+<p id = "numHolder">Your number is placed here</p>
+<button id = "button2" onclick="myImage.src = 'img/' + moodGen()">Cheese</button><br>
+<img id = "myImage">
 
 <script src="js/script.js"></script>
 </body>
