Final push of the night

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+    <link rel="stylesheet" href = "styles/style.css"
+</head>
 <body>
-<p>Random Number Generator!</p>
-<button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
-<p id = "numHolder">Your number is placed here</p>
-<button id = "button2" onclick="myImage.src = 'img/' + moodGen()">Cheese</button><br>
-<img id = "myImage">
+    <p>Random Number Generator!</p>
+    <button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
+    <p id = "numHolder">Your number is placed here</p>
+    <button id = "button2" onclick="myImage.src = 'img/' + moodGen()">Cheese</button><br>
+    <img id = "myImage">
 
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
