--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href = "styles/style.css"
+    <link rel="stylesheet" href = "styles/style.css">
+    <title>Oh yeah, it's that one page</title>
 </head>
+
 <body>
     <p>Random Number Generator!</p>
     <button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
@@ -11,5 +13,6 @@
     <img id = "myImage">
 
     <script src="js/script.js"></script>
+    <div  class="LI-profile-badge"  data-version="v1" data-size="medium" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="george-cadel-munoz"><a class="LI-simple-link" href='https://www.linkedin.com/in/george-cadel-munoz?trk=profile-badge'>George Cadel-Munoz</a></div>
 </body>
 </html>
