--- a/index.html
+++ b/index.html
@@ -2,16 +2,29 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href = "styles/style.css">
-    <title>Oh yeah, it's that one page</title>
-</head>
-
-<body>
-    <p>Random Number Generator!</p>
-    <button id = "button1" onclick="numHolder.innerHTML = getNumber()">Get Number</button>
-    <p id = "numHolder">Your number is placed here</p>
-    <button id = "button2" onclick="myImage.src = 'img/' + moodGen()">Cheese</button><br>
-    <img id = "myImage">
-
     <script src="js/script.js"></script>
+    <title>Oh yeah, it's that one page</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <div class ="header">
+    <h1>EZ Tools</h1>
+    <h3>Here when you need them, here when you don't</h3>
+    </div>
+
+    <div class = "column side">
+        <ul>
+            <li>Navigation</li>
+            <li><a href="gametools.html">Game Tools</a></li>
+            <li><a href="https://github.com/GesusKryst?tab=repositories">My GitHub</a></li>
+        </ul>
+    </div>
+
+    <div class = "column middle">
+        <p>Placeholder text</p>
+    </div>
+
+
+    
 </body>
 </html>
