Navigation pane added

--- a/gametools.html
+++ b/gametools.html
@@ -3,10 +3,31 @@
 <head>
     <title>Game Tools Landing</title>
     <link rel = "stylesheet" href = "styles/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <p>
-        <div>Welcome to the Game Tools page!</div>
-    </p>
+    <!--The Banner Section-->
+    <h1><a href="index.html">EZie Tools</a></h1>
+    <h2>Here when you need them, here when you don't</h2>
+
+    <!--The Content Section-->
+    <div class="row">
+        <div class="column nav">
+        <ul>
+            <!--Side Navigation pane-->
+            <li>Navigation</li><hr>
+            <li><a href="games.html">Games</a></li>
+            <li><a href="gametools.html">Game Tools</a></li>
+            <li><a href="visualSort.html">Visuals</a></li>
+            <li><a href="https://github.com/GesusKryst?tab=repositories">My GitHub</a></li>
+        </ul>
+        </div>
+
+        <div class="column mid">
+            <!--Center content panel-->
+            <p>Welcome to the Game Tools page!</p>
+        </div>
+    </div>
+    
 </body>
 </html>
