--- a/visualSort.html
+++ b/visualSort.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link rel="stylesheet" href = "styles/style.css">
-    <script src="js/script.js"></script>
-    <title>Oh yeah, it's that one page</title>
+    <title>Visual Sorting Landing</title>
+    <link rel = "stylesheet" href = "styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -26,7 +25,7 @@
 
         <div class="column mid">
             <!--Center content panel-->
-            <p>Welcome to the Homepage!</p>
+            <p>Welcome to the Visual Sorting page!</p>
         </div>
     </div>
     
