--- a/games.html
+++ b/games.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <link rel="stylesheet" href = "styles/style.css">
-    <script src="js/script.js"></script>
-    <title>Oh yeah, it's that one page</title>
+    <title>Games Landing</title>
+    <link rel = "stylesheet" href = "styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -26,9 +25,25 @@
 
         <div class="column mid">
             <!--Center content panel-->
-            <p>Welcome to the Homepage!</p>
+            <h3>Welcome to the Games page!</h3>
+        <table>
+            <th>Game</th>
+            <th>Description</th>
+            <tr>
+                <td><img src="game1Screen.png">Game 1</td>
+                <td>Game 1 Description</td>
+            </tr>
+            <tr>
+                <td><img src="game2Screen.png">Game 2</td>
+                <td>Game 2 Description</td>
+            </tr>
+            <tr>
+                <td><img src="game3Screen.png">Game 3</td>
+                <td>Game 3 Description</td>
+            </tr>
+        </table>
+
         </div>
     </div>
-    
 </body>
 </html>
