New page, who dis?

--- a/ml_demo.html
+++ b/ml_demo.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Games Landing</title>
-    <link rel = "stylesheet" href = "styles/style.css">
+    <link rel="stylesheet" href = "styles/style.css">
+    <script src="js/script.js"></script>
+    <title>Oh yeah, it's that one page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -26,25 +27,9 @@
 
         <div class="column mid">
             <!--Center content panel-->
-            <h3>Welcome to the Games page!</h3>
-        <table>
-            <th>Game</th>
-            <th>Description</th>
-            <tr>
-                <td><img src="game1Screen.png">Game 1</td>
-                <td>Game 1 Description</td>
-            </tr>
-            <tr>
-                <td><img src="game2Screen.png">Game 2</td>
-                <td>Game 2 Description</td>
-            </tr>
-            <tr>
-                <td><img src="game3Screen.png">Game 3</td>
-                <td>Game 3 Description</td>
-            </tr>
-        </table>
-
+            <p>Welcome to the Machine Learning Demo Page!</p>
         </div>
     </div>
+    
 </body>
 </html>
