--- a/visualSort.html
+++ b/visualSort.html
@@ -21,6 +21,7 @@
             <li><a href="games.html">Games</a></li>
             <li><a href="gametools.html">Game Tools</a></li>
             <li><a href="visualSort.html">Visuals</a></li>
+            <li><a href="ml_demo.html">Machine Learning</a></li>
             <li><a href="https://github.com/GesusKryst?tab=repositories">My GitHub</a></li>
         </ul>
         </div>
