--- a/index.html
+++ b/index.html
@@ -14,15 +14,7 @@
     <!--The Content Section-->
     <div class="row">
         <div class="column nav">
-        <ul>
-            <!--Side Navigation pane-->
-            <li>Navigation</li><hr>
-            <li><a href="games.html">Games</a></li>
-            <li><a href="gametools.html">Game Tools</a></li>
-            <li><a href="visualSort.html">Visuals</a></li>
-            <li><a href="ml_demo.html">Machine Learning</a></li>
-            <li><a href="https://github.com/GesusKryst?tab=repositories">My GitHub</a></li>
-        </ul>
+            <script src="js/navigation.js"></script>
         </div>
 
         <div class="column mid">
