--- a/tools.html
+++ b/tools.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Game Tools Landing</title>
+    <title>Tools Landing</title>
     <link rel = "stylesheet" href = "styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -18,7 +18,13 @@
 
         <div class="column mid">
             <!--Center content panel-->
-            <p>Welcome to the Game Tools page!</p>
+            <p>Welcome to the Tools page!</p>
+        </div>
+
+        <div>
+            <table>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/dMkTymbZfw4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </table>
         </div>
     </div>
     
