Trying out a responsive design

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="column mid">
             <!--Center content panel-->
             <p>Welcome to the Homepage!</p>
+            <a href = "v2/index.html">Beta site 2</a>
         </div>
     </div>
     
