--- a/v2/index.html
+++ b/v2/index.html
@@ -14,10 +14,7 @@
 
     <!--Navigation Bar-->
     <div class = "navigation">
-        <ul class = "navigation">
-            <li><a href = "index.html" class = "navLink">About Me</a></li> |
-            <li><a href = "../tools.html" class = "navLink">My Projects</a></li> |
-            <li><a href = "contactme.html" class = "navLink">Contact Me</a></li>
+        <ul class = "navigation"><li><a href = "index.html" class = "navLink">About Me</a></li> |<li><a href = "../tools.html" class = "navLink">My Projects</a></li> |<li><a href = "contactme.html" class = "navLink">Contact Me</a></li>
         </ul>
     </div>
 
