"Testing navigation bar stuff"

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <!--Center content panel-->
             <p>Welcome to the Homepage!</p>
             <a href = "v2/index.html">Beta site 2</a>
+            <a href = "v3/index.html">Beta site 3</a>
         </div>
     </div>
     
