--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="column mid">
             <!--Center content panel-->
             <p>Welcome to the Homepage!</p>
-            <a href = "v2/index.html">Beta site 2</a>
+            <a href = "v2/index.html">Beta site 2</a><hr>
             <a href = "v3/index.html">Beta site 3</a>
         </div>
     </div>
