--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <ul id="what_now">
                     <li>
                         <span>Continuing developments on this site!</span><br>
-                        This is my first published website. As I continue to learn more about web development, expect to find more site functionality in the future.
+                        This is my first published website created with HTML, CSS, and jQuery. As I continue to learn more about web development, expect to find more site functionality in the future.
                     </li>
                     <li>
                         <span>Task Notifications Desktop App</span><br>
