PHP doesn't work on Pages

--- a/contact.html
+++ b/contact.html
@@ -17,16 +17,17 @@
 
     <div class = "main_content">
         <article>
-            <strong>Contact Me</strong>
-            <div id="form">
-                <form id="contact_form" method="POST" action="php/email_form.php">
-                    <!--<label for="an_email">Your Email:</label>
-                    <input id="an_email" type="email" required="true">-->
-                    <label for="a_message">Your Message:</label>
-                    <textarea name="a_message" form="contact_form" placeholder="Your message here..."></textarea>
-                    <button type="submit">Send Message</button>
-                </form>
-            </div>
+            <table class = "contact_info">
+                <tr>
+                    <th>Contact Me</th>
+                </tr>
+                <tr>
+                    <td><a href="mailto:testymailclient@gmail.com">Email</a></td>
+                </tr>
+                <tr>
+                    <td><a href="https://www.linkedin.com/in/george-cadel-munoz/">LinkedIn</a></td>
+                </tr>
+            </table>
         </article>
     </div>
 
