Temporary Contact Update

--- a/contact.html
+++ b/contact.html
@@ -28,6 +28,8 @@
                     <td><a href="https://www.linkedin.com/in/george-cadel-munoz/">LinkedIn</a></td>
                 </tr>
             </table>
+            <br><br>
+            👷 🚧 Please be patient while I pretty up this area 🚧
         </article>
     </div>
 
