--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
     <div class = "main_content">
         <article>
             <strong>Under Construction</strong>
-            <p>Hello! This part of the website is currently under development. Please check again later.</p>
+            <p>Hello! This part of the website is currently under 🚧 development 🚧. Please check again later.</p>
         </article>
     </div>
 
