--- a/projects.html
+++ b/projects.html
@@ -17,8 +17,8 @@
 
     <div class = "main_content">
         <article>
-            <strong>Under Construction</strong>
-            <p>Hello! This part of the website is currently under 🚧 development 🚧. Please check again later.</p>
+            <strong>🚧 Under Construction 🚧</strong>
+            <p>Hello! This part of the website is currently under development. Please check again later.</p>
         </article>
     </div>
 
