--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/projects.css">
 </head>
 
 <!--Body Section-->
@@ -18,7 +19,12 @@
     <div class = "main_content">
         <article>
             <strong>Under Construction</strong>
-            <p>Hello! This part of the website is currently under 🚧 development 🚧. Please check again later.</p>
+            <div class="prj-grid">
+                <div class = "prj-item">Item 1</div>
+                <div class = "prj-item">Item 2</div>
+                <div class = "prj-item">Item 3</div>
+                <div class = "prj-item">Item 4</div>
+            </div>
         </article>
     </div>
 
