Updated projects page

--- a/projects.html
+++ b/projects.html
@@ -18,8 +18,26 @@
 
     <div class = "main_content">
         <article>
-            <strong>🚧 Under Construction 🚧</strong>
-            <p>Hello! This part of the website is currently under development. Please check again later.</p>
+            <table>
+                <tr>
+                    <th class = "left_col">Project</th>
+                    <th>Description</th>
+                </tr>
+                <tr>
+                    <td class = "left_col"><img id="navibot_logo" src="img/navibot_logo.png"></td>
+                    <td>This is my senior capstone project. You can find information about it <a class="proj_links" href="https://www.ceias.nau.edu/capstone/projects/CS/2020/NavibotSystems-S20/team.html">here</a>.</td>
+                </tr>
+                <tr>
+                    <td class = "left_col"><img id="tictactoe" src="img/tictactoesnip.png"></td>
+                    <td>This is my Python command line tic-tac-toe game. You can find the source code <a class="proj_links" href="https://github.com/GesusKryst/pythonRepo/blob/master/Games/TicTacToe.py">here</a>.</td>
+                </tr>
+                <tr>
+                    <td class = "left_col"><iframe width="250" src="https://www.youtube.com/embed/dMkTymbZfw4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+                    <td>
+                        This is my Google Takeout project. Information and source code can be found <a class="proj_links" href="https://github.com/gcMunoz/Google_Takeout_File_Mover">here</a>.
+                    </td>
+                </tr>
+            </table>
         </article>
     </div>
 
