Updating contact page

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/navbar.js"></script>
     <script src="js/secretpage.js"></script>
+    <script src="js/otherScripts.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/contact.css">
 </head>
 
 <!--Body Section-->
@@ -24,6 +26,14 @@
                     <th>Contact Me</th>
                 </tr>
                 <tr>
+                    <td>
+                        cadelm.george@gmail.com
+                    </td>
+                    <!--
+                    <td><button onclick="on()">Copy Email</button></td>
+                    -->
+                </tr>
+                <tr>
                     <td><a href="https://www.linkedin.com/in/george-cadel-munoz/">LinkedIn</a></td>
                 </tr>
                 <tr>
@@ -31,16 +41,14 @@
                 </tr>
             </table>
 
-            <!--Emailing me!-->
-            <form id="mail" action="mailto:testymailclient@gmail.com" method="GET" target="_blank">
-                <label for="subject">Subject</label><br>
-                <input id="subject"><br>
-                <textarea name="message" placeholder="Your message here..."></textarea><br>
-                <input type="submit" value="Send Message">
-            </form>
-
-
-            <span id="clickCount" onclick="openBetaSite()">👷</span>🚧 Please be patient while I pretty up this area 🚧
+            <!--
+            <div id="msgBox" onclick="off()">
+                <div id="alrt_text">
+                    text
+                </div>
+            </div>
+            -->
+            </div>
         </article>
     </div>
 
