Pushing content to work on out of town

--- a/exertnal_projects/p5_stuff/canvas.html
+++ b/exertnal_projects/p5_stuff/canvas.html
@@ -4,17 +4,18 @@
 <head>
     <title>P5 JS Playground</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
-    <script src="sketch.js"></script>
     <link rel="stylesheet" href="canvas.css">
 </head>
 
 
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
+    <script src="sketch.js"></script>
+    <script src="sort.js"></script>
     <header>P5 Playground</header>
 
     <main>
-        <div id="canvas"></div>
+        <div id="canvas" style="width: 100%;"></div>
     </main>
 
     <footer><a href="https://p5js.org/reference/">Reference</a></footer>
