--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <article>
             <strong>What do I do?</strong>
             <p>
-                I develop small programming projects, mostly for myself. I work full-time outside of software development, so all programming experience I have is obtained through self-learning and my education received at <span style="color: dodgerblue;">Northern Arizona University</span>.
+                I develop small programming projects, mostly for myself. I've learned a lot about programming
+                during my time at <span style="color: dodgerblue;">Northern Arizona University</span> and from research I pick up 
+                while creating new projects.
             </p>
             <p>
                 While my experience is limited, I have used the following languages for many projects, personal and educational:
