--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 
 <!--Body Section-->
 <body>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="js/navbar.js"></script>
-    <script src="https://kit.fontawesome.com/7b746d66e5.js" crossorigin="anonymous"></script>
     <header></header>
     <nav></nav>
 
     <div class = "main_content">
         <article>
-            <img src = "img/self_portrait_cropped.jpg" class="portrait">
+            <img src = "img/self_portrait_cropped.jpg" class="portrait" alt="A picture of George">
         </article>
         <article>
             <strong>Who am I?</strong>
@@ -65,6 +62,10 @@
     </div>
 
     <footer></footer>
+    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="js/navbar.js"></script>
+    <script src="https://kit.fontawesome.com/7b746d66e5.js" crossorigin="anonymous"></script>
 </body>
 
 
