--- a/projects.html
+++ b/projects.html
@@ -60,6 +60,16 @@
             </div>
             -->
 
+            <div id="card_container">
+                <div class="card_img"><img id="todo_img" src="img/EZTools.png"></div>
+                <div class="card">
+                    <a class="proj_links" href="todo_v2_copy/index.html">
+                        <strong>Simple To Do List</strong>
+                    </a><br>
+                    A simple to-do list, allows you to add as many items as you want. No local storage capabilities just yet (Check back soon).
+                </div>
+            </div>
+
         </article>
     </div>
 
