Trying out local storage

--- a/projects.html
+++ b/projects.html
@@ -70,6 +70,16 @@
                 </div>
             </div>
 
+            <div id="card_container">
+                <div class="card_img"><img id="color_img" src="img/colorImg.png" style="border-radius: 10px;"></div>
+                <div class="card">
+                    <a class="proj_links" href="theme_chooser/index.html">
+                        <strong>Color Picker</strong>
+                    </a><br>
+                    Browse all the colors hexidecimal has to offer. Saves your last used color.
+                </div>
+            </div>
+
         </article>
     </div>
 
