--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <p>
                 I know a bit about programming from my educational background at Northern Arizona University, as well as some self taught research for projects I've done:
                 <ul id="my_langs">
-                    <li>Python</li>
-                    <li>Java</li>
+                    <li>Python <i class="fab fa-python"></i></li>
+                    <li>Java <i class="fab fa-java"></i></li>
                     <li>C</li>
-                    <li>SQL</li>
+                    <li>SQL <i class="fas fa-server"></i></li>
                 </ul>
                 I also have a few <a style="color: cornflowerblue; text-decoration: none;" href="https://www.pmmi.org/workforce-development/mechatronics">PMMI</a> certifications under my belt:
                 <ul id="my_langs">
@@ -54,11 +54,11 @@
                 
                 While my experience is limited, I have used the following languages for many projects, personal and educational:
                 <ul id="my_langs">
-                    <li>Python <i class="fab fa-python"></i></li>
+                    <li>Python </i></li>
                     <li>HTML/CSS <i class="fab fa-html5"></i> <i class="fab fa-css3-alt"></i></li>
                     <li>Javascript <i class="fab fa-js-square"></i></li>
-                    <li>Java <i class="fab fa-java"></i></li>
-                    <li>SQL <i class="fas fa-server"></i></li>
+                    <li>Java </i></li>
+                    <li>SQL </i></li>
                     <li>C/C++</li>
                 </ul>
                 
